SocketCAN dissector does not support CAN FD
This issue was migrated from bug 12687 in our old bug tracker.
Original bug information:
Reporter: Oliver Hartkopp
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: Git
Attachments:
SocketCAN-CANFD.pdf: CAN FD support in Linux presentation
vcan0-traffic-cangen-m-g30.pcapng: vcan0 traffic capture file created by 'cangen vcan0 -m -g30'
0001-pcap-can-linux-Add-support-for-CAN-FD.patch: Patch for libpcap to support CAN FD
0001-dissector-packet-socketcan-add-support-for-CAN-FD.patch: Patch for Wireshark to support CAN FD
vcan0-canfd-mixed-traffic.pcapng: PCAPNG file with mixed CAN / CAN FD traffic
: With XTD Identifiers the marked dots should be zeros
: Screenshot WS2.0.5 with new libpcap
: Screenshot WS2.3.0rc0 with new libpcap
: Screenshot from Wireshark with Patchset 10
pcap4Screenshot_2016-08-28_11-27-02.pcapng: PCAP file for Screenshot from Wireshark with Patchset 10